Fix link spacing and underline all links

--- a/styles.css
+++ b/styles.css
@@ -109,34 +109,30 @@ a:hover {
 
 .grayscale-text {
   color: #758aea;
+  text-decoration-color: #758aea;
   font-weight: bold;
-  text-decoration-color: transparent;
 }
 
 .gt-text {
   color: #efc955;
+  text-decoration-color: #efc955;
   font-weight: bold;
-  text-decoration-color: transparent;
 }
 
 .tesla-text {
   color: #e80d0d;
+  text-decoration-color: #e80d0d;
   font-weight: bold;
-  text-decoration-color: transparent;
 }
 
 .ncr-text {
   color: #54bc4b;
+  text-decoration-color: #54bc4b;
   font-weight: bold;
-  text-decoration-color: transparent;
 }
 
 .project-title {
   font-weight: bold;
-}
-
-.code-block {
-  font-size: small;
 }
 
 .code-block > pre {
@@ -182,17 +178,21 @@ a:hover {
 
   .grayscale-text {
     color: #505fa0;
+    text-decoration-color: #505fa0;
   }
 
   .gt-text {
-    color: rgb(241, 193, 46);
+    color: #f1c12e;
+    text-decoration-color: #f1c12e;
   }
 
   .tesla-text {
     color: #f70303;
+    text-decoration-color: #f70303;
   }
 
   .ncr-text {
     color: #4fdf42;
+    text-decoration-color: #4fdf42;
   }
 }
